hphp/hack/test/typecheck/reactive/unsafe/references_in_unsafe_rx1.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

function f(int &$a): void {
}
